force-app/main/default/objects/Technical_Supplier__c/Technical_Supplier__c.object-meta.xml
<CustomObject>
    <description>A company that supplies Sound, Lights, AV or Decor</description>
    <label>Technical Supplier</label>
    <nameField>
        <label>Technical Supplier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>