force-app/main/default/objects/Technical_Supplier__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Account information for this Technical Supplier</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Technical Suppliers</relationshipLabel>
    <relationshipName>Technical_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>