force-app/main/default/objects/Technical_Supplier__c/fields/Banking_Details__c.field-meta.xml
<CustomField>
    <fullName>Banking_Details__c</fullName>
    <description>The banking details to appear on the Invoice</description>
    <label>Banking Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>