force-app/main/default/objects/Technical_Supplier__c/fields/Company_Registration_no__c.field-meta.xml
<CustomField>
    <fullName>Company_Registration_no__c</fullName>
    <description>The registered number of this company</description>
    <label>Company Registration no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>