force-app/main/default/objects/Technical_Supplier__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <description>A Phone number where this Technical supplier can be reached</description>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>