force-app/main/default/objects/Technical_Supplier__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The contact email for this technical supplier</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>