force-app/main/default/objects/Technical_Supplier__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary contact for this technical company</description>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A contact must have the &apos;Technical&apos; checkbox checked to be added here</errorMessage>
        <filterItems>
            <field>Contact.Technical__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Technical Suppliers</relationshipLabel>
    <relationshipName>Technical_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>