force-app/main/default/objects/Technical_Supplier__c/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <description>This company&apos;s VAT number</description>
    <label>VAT Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>