force-app/main/default/objects/Technical_Supplier__c/fields/Vat_Registered__c.field-meta.xml
<CustomField>
    <fullName>Vat_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vat Registered</label>
    <type>Checkbox</type>
</CustomField>